# filc-bazel-template

./: .bazelrc  .gitignore  MODULE.bazel  README.md  bazel-bin  bazel-filbaz  bazel-out  bazel-testlogs  build.pid  build_log.txt  filc_extension.bzl  filc_repo.bzl  hello_out.txt  ls_r.txt  pwd.txt  slop.db-shm  slop.db-wal
samples/hello_world/: hello_world.c
scripts/: check_filc.sh
src/: BUILD.bazel  main.c  success.c
toolchain/: BUILD.bazel  cc_config.bzl
