package(default_visibility = ["//visibility:public"])

load(":cc_config.bzl", "cc_toolchain_config")

filegroup(name = "empty")

# Toolchain files from the @filc repository
filegroup(
    name = "filc_files",
    srcs = [
        "//toolchain/bin:filcc_wrapper",
        "@filc//:all_files",
    ],
)

cc_toolchain_config(
    name = "filc_toolchain_config",
)

cc_toolchain(
    name = "filc_cc_toolchain",
    all_files = ":filc_files",
    compiler_files = ":filc_files",
    dwp_files = ":empty",
    linker_files = ":filc_files",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 0,
    toolchain_config = ":filc_toolchain_config",
    toolchain_identifier = "filc-toolchain",
)

toolchain(
    name = "filc_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    target_compatible_with = [
        "@platforms//os:linux",
        "@platforms//cpu:x86_64",
    ],
    toolchain = ":filc_cc_toolchain",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)
